Fix menu z-index and some ul having the disc style

--- a/src/_component/header/header-mobile.scss
+++ b/src/_component/header/header-mobile.scss
@@ -69,6 +69,7 @@
     left: 0;
     right: 0;
     border: 0.1rem solid $color-mercury;
+    z-index: 1;
 }
 
 #toggle-top-menu,
